<resources>
    <array name="user_admin">
        <item color="#FF0707">Select User Type</item>
        <item>Customer</item>
        <item>Admin</item>
    </array>
    <string name="app_name">Balaji Confectioners</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enterEmail">Enter Email Id</string>
    <string name="enterPass">Enter Password</string>
    <string name="remember_login">Remember Login?</string>
    <string name="forget_password"><u>Forgot Password?</u></string>
    <string name="login">Log In</string>
    <string name="title_activity_dashboard">Balaji Confectioners</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="balaji">Balaji Confectioners</string>
    <string name="nav_header_subtitle">Purana Bazar Bahjoi, Sambhal</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="category">Category</string>
    <string name="item">Items</string>
    <string name="logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="balaji_confectioners">Balaji Confectioners</string>
    <string name="title_activity_main_drawer">Balai Confectioners</string>
    <string name="nav_header_title">Balaji Confectioners</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_list">Category List</string>
    <string name="add_item">Add Item</string>
    <string name="add_category">Add Category</string>
    <string name="enter_item">Enter Item</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_Brand">Enter Brand</string>
    <string name="developed_by_techkets">Developed by Techkets!</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="register_user">Register User</string>
    <string name="category_name">Category Name</string>
    <string name="delete">Delete</string>
    <string name="empty_item_list">Empty Item List</string>
    <string name="delete_item">Delete this Item?</string>
    <string name="users_details">Users Details</string>
    <string name="title_activity_user_view">UserView</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="let_s_begin">Let\'s Begin</string>
    <string name="reset_password_instruction">Check Your Email and follow on screen instruction to <b>RESET</b> your password.</string>
    <string name="reset_passwd">Just Provide us your E-mail Address and its done!</string>
    <string name="update">Update</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="place_your_order">Place Your Order</string>
    <string name="confirm_orders">Confirm Orders</string>
    <string name="orders_list">Orders List</string>

</resources>
