<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.SignInActivity">
̥
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="35dp"
            android:cropToPadding="true"
            android:src="@drawable/ic_person" />
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/enterEmail"
            android:padding="5dp"
            android:fontFamily="@font/gabriola"
            android:textSize="25sp"
            android:background="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="40dp"
            android:hint="@string/enterEmail"/>

    </LinearLayout>
    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yellow"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="35dp"
            android:cropToPadding="true"
            android:src="@drawable/ic_lock" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/enterPasswd"
            android:padding="5dp"
            android:fontFamily="@font/gabriola"
            android:textSize="25sp"
            android:background="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="40dp"
            android:hint="@string/enterPass"/>

    </LinearLayout>
    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yellow"/>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_login"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"/>
    <Button
        android:id="@+id/loginBtn"
        android:elevation="7dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/curve_yellow_btn"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:fontFamily="@font/gabriola"
        android:textSize="35sp"
        android:textColor="@android:color/white"/>
    <View
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yellow"/>
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/gabriola"/>

</LinearLayout>