<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF7EE"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/category_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabriola"
            android:padding="7dp"
            android:text="@string/category_name"
            android:textAlignment="center"
            android:textColor="#E91E63"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriola"
                android:padding="5dp"
                android:text="@string/update"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/delete_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriola"
                android:padding="5dp"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>