<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/additemCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/itemImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/balaji" />

            <EditText
                android:id="@+id/enterItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_item"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="#E91E63" />

            <EditText
                android:id="@+id/enterPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_price"
                android:inputType="number"
                android:padding="20dp"
                android:textColor="#E91E63" />

            <EditText
                android:id="@+id/enterQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:padding="15dp"
                android:textColor="#E91E63" />

            <EditText
                android:id="@+id/enterBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_Brand"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="#E91E63" />

            <Spinner
                android:id="@+id/spinCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

            </Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/itemCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    android:textAllCaps="false"
                    android:textColor="#E91E63" />

                <Button
                    android:id="@+id/itemSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Save"
                    android:textAllCaps="false"
                    android:textColor="#E91E63" />

                <Button
                    android:id="@+id/itemImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:text="Upload Image"
                    android:textAllCaps="false"
                    android:textColor="#673AB7" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.cardview.widget.CardView>